0.14.13
	new feature: SSV format for RS import
	new feature: complex VLAN IDs in switchvlans gateway
	update: Force10, NETGEAR and D-Link switches, Raisecom MUXes
0.14.12 2008-02-29
	new feature: default value for RS inservice status
	new feature: AutoPorts feature
	new feature: HTTP installer
	new feature: default object type
	new feature: UTF-8 support
	bugfix: router HW type list was broken
	update: added Aten KVM switches and consoles
	update: added Tainet MUXes
	update: updated HP servers
0.14.11 2008-02-15
	bugfix: rackspace allocation was broken by magic_quotes fix
	bugfix: don't generate error messages by accessing _GET array
	bugfix: thumbs cache wasn't updated in rare cases
	bugfix: LivePTR: fixed warnings, tabindex, name reset and color markup
	update: KVM port type has been split (see wiki page)
	update: Avocent KVM switches, RAD and Cronyx multiplexers
0.14.10 2008-02-01
	bugfix: avoid hitting GET limit on object and rack update
	bugfix: sticker reset icon did not work sometimes
	bugfix: don't fail rendering an empty rack row
	bugfix: rack operations were broken in 0.14.9
	bugfix: upgrade script didn't authenticate users properly
	new feature: LDAP authentication
	new feature: borrow URL detection from Mantis BTS (suggested by Joakim Kasimir)
	new feature: Live PTR tab for DNS sync
	new feature: rack population threshold for rackspace allocation
0.14.9 2008-01-30
	bugfix: upgrade to 0.14.8 broke IPv4 prefix creation
	bugfix: more DB cleanups
	bugfix: SNMP didn't work properly for C4948 ports
	bugfix: rowspan attribute was computed incorrectly sometimes
	bugfix: protect referenced dictionary records from deletion
	bugfix: config reset was wrong for default port type
	bugfix: fixed incorrect string escaping caused by PHP magic_quotes 
	update: Live VLANs color legend now distinguishes between 1 and 0
		MAC addresses on a port
	update: fixed tabindex in NATv4 rules form
	update: better dictionary editor layout
	update: get FQDN over SNMP